
VERSION 0.8.1cvs
================

2005-11-07  Vincent Richard  <vincent@vincent-richard.net>

 * SMTPTransport.cpp: fixed bug in disconnect() when authentication is
   not needed (thanks to Benjamin Biron).

2005-11-06  Vincent Richard  <vincent@vincent-richard.net>

 * Started version 0.8.1.


VERSION 0.8.0
=============

2005-11-06  Vincent Richard  <vincent@vincent-richard.net>

 * First version of the VMime Book.

2005-11-05  Vincent Richard  <vincent@vincent-richard.net>

 * Refactored header field values and parameters.

2005-10-19  Vincent Richard  <vincent@vincent-richard.net>

 * charsetConverter.{hpp|cpp}: new object 'charsetConverter' for converting
   between charsets (code moved from static functions in 'charset' class).

 * Added 'charsetFilteredOutputStream': provide charset conversion while
   writing to an output stream.

2005-10-16  Vincent Richard  <vincent@vincent-richard.net>

 * SConstruct: fixed compilation problems on FreeBSD (thanks to Xin LI).

2005-10-13  Vincent Richard  <vincent@vincent-richard.net>

 * attachmentHelper.{hpp|cpp}: the attachmentHelper allows listing all
   attachments in a message, as well as adding new attachments.

2005-10-06  Vincent Richard  <vincent@vincent-richard.net>

 * utility/progressionListener.{hpp|cpp}: renamed 'progressionListener'
   to 'progressListener'.

2005-10-04  Vincent Richard  <vincent@vincent-richard.net>

 * net/service: removed "server.socket-factory" property; added the
   service::setSocketFactory() function instead. Removed "name" parameter
   from platformDependant::getSocketFactory() function.

 * net/service: removed "timeout.factory" property; added the function
   service::setTimeoutHandlerFactory() instead. Removed the function
   platformDependant::getTimeoutHandlerFactory().

2005-10-03  Vincent Richard  <vincent@vincent-richard.net>

 * Added TLS/SSL support, using GNU TLS library.

2005-09-17  Vincent Richard  <vincent@vincent-richard.net>
